--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
     <!-- Slick carousel -->
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <!--<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />-->
 
   </head>
 
   <body>
 
     <div class="site-wrapper">
+
       <!-- Navigation -->
 
       <div class="nav-container">
@@ -34,23 +35,72 @@
         </div>
         <div class="menu-container">
           <ul class="nav">
-            <li class="nav-items"><a class="nav-links" href="/"><img class="nav-icons" src="assets/img/icons/pngs/home.png" />Home</a></li>
-            <li class="nav-items"><a class="nav-links" href="/"><img class="nav-icons" src="assets/img/icons/pngs/records.png" />Records</a></li>
-            <li class="nav-items"><a class="nav-links" href="/"><img class="nav-icons" src="assets/img/icons/pngs/music.png" />Music</a></li>
-            <li class="nav-items"><a class="nav-links" href="/"><img class="nav-icons" src="assets/img/icons/pngs/artists.png" />Artists</a></li>
-            <li class="nav-items"><a class="nav-links" href="/"><img class="nav-icons" src="assets/img/icons/pngs/concerts.png" />Concerts</a></li>
-            <li class="nav-items"><a class="nav-links" href="/">Sign Up</a></li>
+            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/home.png" />Home</a></li>
+            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/records.png" />Records</a></li>
+            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/music.png" />Music</a></li>
+            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/artists.png" />Artists</a></li>
+            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/concerts.png" />Concerts</a></li>
+            <li class="nav-items"><a class="nav-links" href="#">Sign Up</a></li>
           </ul>
         </div>
       </div>
 
       <!-- End Navigation -->
 
+      <!-- Site Hero -->
+
+      <div class="hero-container">
+        <div class="hero-content">
+          <h1>A.M Paradox</h1>
+          <p>Christopher Brent Wood, better known by his stage name Brent Faiyaz, is an American singer and record producer. He released his debut project, an extended play entitled A.M. Paradox, in 2016.</p>
+          <a href="#" class="video-link" target="_blank"><img class="play-img" src="assets/img/icons/pngs/play_button.png" /><span class="video-link-inner">Watch Video</span></a>
+        </div>
+      </div>
+
+      <!-- End Site Hero -->
+
+      <!-- About Section -->
+
+      <div class="about-container">
+        <div class="row">
+          <div class="column left">
+            <img class="about-img" src="assets/img/images/image2.png" />
+          </div>
+          <div class="column right">
+            <div class="info-container">
+              <h2>Brent Faiyaz, So Far Gone</h2>
+              <p>Faiyaz began uploading his music onto SoundCloud in 2014 and moved from his hometown Columbia, Maryland to Charlotte, North Carolina before ultimately settling in Los Angeles, California to further his music career. On January 19, 2015, he released his debut single "Allure".[4] On June 1, 2016, Faiyaz released "Invite Me", the lead single from his upcoming debut EP. On September 19, 2016, his 21st birthday, the EP entitled A.M. Paradox was released and received with positive reviews from music critics. On January 26, 2017, Sonder released their debut EP into.</p>
+            </div>
+            <div class="btn-container">
+              <a class="btn">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- End About Section -->
+
+      <!-- New Releases Slider -->
+
+      <div class="slider-container">
+        <div class="slider-section">
+          <div class="slider-info">
+            <h2>New Releases</h2>
+            <p>New albums every single month, check out the newest & best from Snyder Recording artist, now available on Apple Music & Spotify.</p>
+          </div>
+          <div class="slider">
+            <p>Insert Slider Here</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- End New Releases Slider -->
+
     </div>
 
   </body>
 
   <!-- Slick Carousel -->
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <!--<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>-->
 
 </html>
