--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Snyder Recordings</title>
     <meta name="description" content="Christopher Brent Wood, better known by his stage name Brent Faiyaz, is an American singer and record producer. He released his debut project, an extended play entitled A.M. Paradox, in 2016." />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Snyder Recordings" />
 
-    <link rel="stylesheet" href="assets/css/stylesheet.css"> <!-- Main Stylesheet -->
+    <link rel="stylesheet" href="assets/css/stylesheet.css" /> <!-- Main Stylesheet -->
 
     <!-- Google Fonts (Karla) -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet" />
 
     <!-- Slick carousel -->
     <!--<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />-->
@@ -25,27 +25,27 @@
 
   <body>
 
-    <div class="site-wrapper">
-
       <!-- Navigation -->
 
-      <div class="nav-container">
-        <div class="logo-container">
-          <img class="site-logo" src="assets/img/logo/pngs/srrecordings.png" />
+        <div class="nav-container">
+          <div class="logo-container">
+            <img class="site-logo" src="assets/img/logo/pngs/srrecordings.png" />
+          </div>
+          <div class="menu-container">
+            <ul class="nav">
+              <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/home.png" />Home</a></li>
+              <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/records.png" />Records</a></li>
+              <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/music.png" />Music</a></li>
+              <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/artists.png" />Artists</a></li>
+              <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/concerts.png" />Concerts</a></li>
+              <li class="nav-items"><a class="nav-links" href="#">Sign Up</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="menu-container">
-          <ul class="nav">
-            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/home.png" />Home</a></li>
-            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/records.png" />Records</a></li>
-            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/music.png" />Music</a></li>
-            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/artists.png" />Artists</a></li>
-            <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/concerts.png" />Concerts</a></li>
-            <li class="nav-items"><a class="nav-links" href="#">Sign Up</a></li>
-          </ul>
-        </div>
-      </div>
 
       <!-- End Navigation -->
+
+    <div class="site-wrapper">
 
       <!-- Site Hero -->
 
@@ -96,7 +96,67 @@
 
       <!-- End New Releases Slider -->
 
-    </div>
+      <!-- Map Section -->
+
+      <div class="map-container" id="map">
+
+      </div>
+
+              <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12407.842986347907!2d-94.7044442!3d38.9705643!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa7a51cba69767a7e!2sLifted%20Logic!5e0!3m2!1sen!2sus!4v1614098291577!5m2!1sen!2sus" width="100%" height="700px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
+
+      <!-- End Map Section -->
+
+      <!-- Contact Section -->
+
+      <div class="contact-container">
+        <div class="row">
+          <div class="column left">
+            <h2 class="left-align">Get In Touch</h2>
+            <p class="left-align">New albums every single month, check out the newest & best from Snyder Recording artist, now available on Apple Music & Spotify.</p>
+            <div class="form-container">
+              <form>
+                <input type="text" id="fname" value="First Name">
+                <input type="text" id="lname" value="Last Name"><br />
+                <input type="email" id="email" value="Email Address">
+                <select name="reason" id="reason">
+                  <option value="booking">Booking</option>
+                  <option value="interview-request">Interview Request</option>
+                  <option value="appearance-request">Appearance Request</option>
+                  <option value="merch-question">Merchandise Question</option>
+                  <option value="other">Other</option>
+                </select><br />
+                <textarea id="message" rows="6" cols="50" value="Message"></textarea><br />
+                <input type="submit" class="btn" value="Submit">
+              </form>
+            </div>
+          </div>
+          <div class="column right">
+            <img class="contact-img" src="assets/img/images/image3.png" />
+          </div>
+        </div>
+      </div>
+
+      <!-- End Contact Section -->
+
+    </div><!-- End Site Wrapper -->
+
+    <!-- End Painted Site -->
+
+    <!-- Google Maps API -->
+      <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: 38.97051951397841, lng: -94.70441650518683},
+            zoom: 8,
+            streetViewControl: false
+        });
+      }
+      </script>
+      <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATAylgHblfrH-OUlfY7JvQZ9NYVxh_w14&callback=initMap"
+      async>
+      </script>
 
   </body>
 
