--- a/index.html
+++ b/index.html
@@ -138,6 +138,83 @@
 
       <!-- End Contact Section -->
 
+      <!-- Footer -->
+
+      <div class="footer-container">
+        <div class="row foot-top">
+            <div class="col-6">
+                <div class="foot-logo">
+                    <img src="assets/img/logo/pngs/srrecordings_white.png" />
+                </div>
+                <p class="foot-text">8521 Fairfax Rd<br />Los Angeles, CA<br />90210<br /><a class="foot-links" href="tel:9095054302">909.505.4302</a>
+            </div>
+            <div class="col-6">
+                <h3 class="foot-headers">Explore</h3>
+                <ul class="foot-nav">
+                    <li class="foot-items"><a class="foot-links" href="#">About Us</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Our Story</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Team</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Careers</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">FAQ</a></li>
+                </ul>
+            </div>
+            <div class="col-6">
+                <h3 class="foot-headers">Music</h3>
+                <ul class="foot-nav">
+                    <li class="foot-items"><a class="foot-links" href="#">Missing Out</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Trapsoul</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Sonder Sons</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Paradise Today</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Needed</a></li>
+                </ul>
+            </div>
+            <div class="col-6">
+                <h3 class="foot-headers">Artists</h3>
+                <ul class="foot-nav">
+                    <li class="foot-items"><a class="foot-links" href="#">Brent Faiyaz</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Drake</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Bryson Tiller</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Young Ford</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Rory Fresco</a></li>
+                </ul>
+            </div>
+            <div class="col-6">
+                <h3 class="foot-headers">Records</h3>
+                <ul class="foot-nav">
+                    <li class="foot-items"><a class="foot-links" href="#">What a Time</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Coming Home</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Always First</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">So Far Gone</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Big Bluez</a></li>
+                </ul>
+            </div>
+            <div class="col-6">
+                <h3 class="foot-headers">Concerts</h3>
+                <ul class="foot-nav">
+                    <li class="foot-items"><a class="foot-links" href="#">Midland Live</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Granada 2018</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Tiller Unplugged</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">Love Live</a></li>
+                    <li class="foot-items"><a class="foot-links" href="#">XX Live Mix</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row foot-bottom">
+            <div class="foot-left">
+                <a class="foot-links bottom-links" href="#">Privacy Policy</a>
+                <a class="foot-links bottom-links" href="#">Terms & Conditions</a>
+            </div>
+            <div class="foot-right">
+                <a class="bottom-links" href="#"><img src="assets/img/icons/pngs/youtube.png" /></a>
+                <a class="bottom-links" href="#"><img src="assets/img/icons/pngs/twitter.png" /></a>
+                <a class="bottom-links" href="#"><img src="assets/img/icons/pngs/instagram.png" /></a>
+                <a class="bottom-links" href="#"><img src="assets/img/icons/pngs/snapchat.png" /></a>
+            </div>
+        </div>
+      </div>
+
+      <!-- End Footer -->
+
     </div><!-- End Site Wrapper -->
 
     <!-- End Painted Site -->
@@ -158,9 +235,9 @@
       async>
       </script>
 
-  </body>
+      <!-- Slick Carousel -->
+      <!--<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>-->
 
-  <!-- Slick Carousel -->
-  <!--<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>-->
+  </body>
 
 </html>
