--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet" />
 
-    <!-- JQuery CDN -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <!-- Slick carousel -->
-    <!--<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />-->
+    <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
 
   </head>
 
@@ -53,7 +50,7 @@
 
       <!-- Site Hero -->
 
-      <div class="hero-container" id="zoom-in">
+      <div class="hero-container">
         <div class="hero-content">
           <h1>A.M Paradox</h1>
           <p>Christopher Brent Wood, better known by his stage name Brent Faiyaz, is an American singer and record producer. He released his debut project, an extended play entitled A.M. Paradox, in 2016.</p>
@@ -86,15 +83,60 @@
 
       <!-- New Releases Slider -->
 
-      <div class="slider-container">
+      <div class="slider-container" id="music">
         <div class="slider-section">
           <div class="slider-info">
             <h2>New Releases</h2>
             <p>New albums every single month, check out the newest & best from Snyder Recording artist, now available on Apple Music & Spotify.</p>
           </div>
+
+          <!-- Slider Item 1 -->
+
           <div class="slider">
-            <p>Insert Slider Here</p>
+            <div class="slider-box">
+              <div class="slider-img">
+                <img src="assets/img/images/image4.png" />
+              </div>
+              <div class="slider-content">
+                <h3>Trapsoul</h3>
+                <p class="subtitle">Bryson Tiller</p>
+                <p>Bryson Djuan Tiller, is an American singer, songwritter and rapper. Born in Louisville, Kentucky, he started his career in 2011, releasing the debut mixtape title Killer Instinct Vol. 1.
+              </div>
+            </div>
           </div>
+
+          <!-- Slider Item 2 -->
+
+          <div class="slider">
+            <div class="slider-box">
+              <div class="slider-img">
+                <img src="assets/img/images/image4.png" />
+              </div>
+              <div class="slider-content">
+                <h3>Trapsoul</h3>
+                <p class="subtitle">Bryson Tiller</p>
+                <p>Bryson Djuan Tiller, is an American singer, songwritter and rapper. Born in Louisville, Kentucky, he started his career in 2011, releasing the debut mixtape title Killer Instinct Vol. 1.
+              </div>
+            </div>
+          </div>
+
+          <!-- Slider Item 3 -->
+
+          <div class="slider">
+            <div class="slider-box">
+              <div class="slider-img">
+                <img src="assets/img/images/image4.png" />
+              </div>
+              <div class="slider-content">
+                <h3>Trapsoul</h3>
+                <p class="subtitle">Bryson Tiller</p>
+                <p>Bryson Djuan Tiller, is an American singer, songwritter and rapper. Born in Louisville, Kentucky, he started his career in 2011, releasing the debut mixtape title Killer Instinct Vol. 1.
+              </div>
+            </div>
+          </div>
+
+          <!-- End Slider Items -->
+
         </div>
       </div>
 
@@ -103,8 +145,6 @@
       <!-- Map Section -->
 
       <div class="map-container" id="map"></div>
-
-              <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12407.842986347907!2d-94.7044442!3d38.9705643!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa7a51cba69767a7e!2sLifted%20Logic!5e0!3m2!1sen!2sus!4v1614098291577!5m2!1sen!2sus" width="100%" height="700px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
 
       <!-- End Map Section -->
 
@@ -115,13 +155,14 @@
           <div class="column left">
             <div class="form-section">
               <h2 class="left-align">Get In Touch</h2>
-              <p class="left-align">New albums every single month, check out the newest & best from Snyder Recording artist, now available on Apple Music & Spotify.</p>
-              <div class="form-container">
-                <form>
-                  <input type="text" id="fname" value="First Name">
-                  <input type="text" id="lname" value="Last Name"><br />
-                  <input type="email" id="email" value="Email Address">
+              <p class="left-align width-modifier">New albums every single month, check out the newest & best from Snyder Recording artist, now available on Apple Music & Spotify.</p>
+              <div class="form-container" id="form-container">
+                <form id="contact-form" onsubmit="formSubmit()">
+                  <input type="text" id="fname" placeholder="First Name">
+                  <input type="text" id="lname" placeholder="Last Name"><br />
+                  <input type="email" id="email" placeholder="Email Address">
                   <select name="reason" id="reason">
+                    <option value="reason-for-contacting" disabled selected>Reason For Contacting</option>
                     <option value="booking">Booking</option>
                     <option value="interview-request">Interview Request</option>
                     <option value="appearance-request">Appearance Request</option>
@@ -131,6 +172,9 @@
                   <textarea id="message" rows="6" cols="50" value="Message"></textarea><br />
                   <input type="submit" class="btn" value="Submit">
                 </form>
+              </div>
+              <div class="thank-you" id="thank-you">
+                <p>Thank you for reaching out to us! We'll be in touch shortly. Until then check out some <a href="#music">music.</a></p>
               </div>
             </div>
           </div>
@@ -223,6 +267,12 @@
 
     <!-- End Painted Site -->
 
+    <!-- Form Submit Mesage -->
+
+    <script src="assets/js/form.js"></script>
+
+    <!-- End Form Submit Message -->
+
     <!-- Hero zoom on scroll effect -->
     <!--<script>
     $(window).ready(function() {
@@ -233,7 +283,7 @@
         });
     });
     </script>-->
-    <script>
+  <!--  <script>
         var timer = setInterval(initZoom, 1000);
 
         function initZoom() {
@@ -246,7 +296,7 @@
                     zoomIn.classList.remove('zoom-out');
                     zoomIn.classList.add('zoom-in');
                 }
-                else (zoomIn.classList.remove('zoom-in');
+                else (zoomIn.classList.remove('zoom-in')
                     zoomIn.classList.add('zoom-out');
                 );
                 zoomIn.id = 'zoom-out';
@@ -273,9 +323,11 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATAylgHblfrH-OUlfY7JvQZ9NYVxh_w14&map_ids=7ab02cc620cf5d2b&callback=initMap"
       async></script>
 
-      <!-- Slick Carousel -->
-      <!--<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>-->
+      <!-- JQuery -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+      <!-- Slick Carousel -->
+      <script type="text/javascript" src="assets/js/slick.min.js"></script>
   </body>
 
 </html>
