--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <!-- Slick carousel -->
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css" />
 
   </head>
 
@@ -89,53 +90,82 @@
             <h2>New Releases</h2>
             <p>New albums every single month, check out the newest & best from Snyder Recording artist, now available on Apple Music & Spotify.</p>
           </div>
-
-          <!-- Slider Item 1 -->
-
           <div class="slider">
+
+            <!-- Slider Item 1 -->
+
             <div class="slider-box">
               <div class="slider-img">
                 <img src="assets/img/images/image4.png" />
               </div>
               <div class="slider-content">
-                <h3>Trapsoul</h3>
+                <h2>Trapsoul</h2>
                 <p class="subtitle">Bryson Tiller</p>
                 <p>Bryson Djuan Tiller, is an American singer, songwritter and rapper. Born in Louisville, Kentucky, he started his career in 2011, releasing the debut mixtape title Killer Instinct Vol. 1.
               </div>
             </div>
-          </div>
+
 
           <!-- Slider Item 2 -->
 
-          <div class="slider">
             <div class="slider-box">
               <div class="slider-img">
                 <img src="assets/img/images/image4.png" />
               </div>
               <div class="slider-content">
-                <h3>Trapsoul</h3>
+                <h2>Trapsoul</h2>
                 <p class="subtitle">Bryson Tiller</p>
                 <p>Bryson Djuan Tiller, is an American singer, songwritter and rapper. Born in Louisville, Kentucky, he started his career in 2011, releasing the debut mixtape title Killer Instinct Vol. 1.
               </div>
             </div>
-          </div>
+
 
           <!-- Slider Item 3 -->
 
-          <div class="slider">
             <div class="slider-box">
               <div class="slider-img">
                 <img src="assets/img/images/image4.png" />
               </div>
               <div class="slider-content">
-                <h3>Trapsoul</h3>
+                <h2>Trapsoul</h2>
                 <p class="subtitle">Bryson Tiller</p>
                 <p>Bryson Djuan Tiller, is an American singer, songwritter and rapper. Born in Louisville, Kentucky, he started his career in 2011, releasing the debut mixtape title Killer Instinct Vol. 1.
               </div>
             </div>
-          </div>
+
+            <!-- Slider Item 4 -->
+
+              <div class="slider-box">
+                <div class="slider-img">
+                  <img src="assets/img/images/image4.png" />
+                </div>
+                <div class="slider-content">
+                  <h2>Trapsoul</h2>
+                  <p class="subtitle">Bryson Tiller</p>
+                  <p>Bryson Djuan Tiller, is an American singer, songwritter and rapper. Born in Louisville, Kentucky, he started his career in 2011, releasing the debut mixtape title Killer Instinct Vol. 1.
+                </div>
+              </div>
+
+              <!-- Slider Item 5 -->
+
+                <div class="slider-box">
+                  <div class="slider-img">
+                    <img src="assets/img/images/image4.png" />
+                  </div>
+                  <div class="slider-content">
+                    <h2>Trapsoul</h2>
+                    <p class="subtitle">Bryson Tiller</p>
+                    <p>Bryson Djuan Tiller, is an American singer, songwritter and rapper. Born in Louisville, Kentucky, he started his career in 2011, releasing the debut mixtape title Killer Instinct Vol. 1.
+                  </div>
+                </div>
+
+            </div>
 
           <!-- End Slider Items -->
+          <div class="slick-nav-container">
+              <button type="button" class="slick-prev"><img src="assets/img/icons/pngs/left_controller.png" /></button>
+              <button type="button" class="slick-next"><img src="assets/img/icons/pngs/right_controller.png" /></button>
+          </div>
 
         </div>
       </div>
@@ -324,10 +354,13 @@
       async></script>
 
       <!-- JQuery -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+      <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
       <!-- Slick Carousel -->
       <script type="text/javascript" src="assets/js/slick.min.js"></script>
+      <script type="text/javascript" src="assets/js/slider.js"></script>
+
   </body>
 
 </html>
